--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Depends:
     iSEE
-    miaViz
 Imports:
-    TreeSummarizedExperiment
-    shiny
+    miaViz,
+    TreeSummarizedExperiment,
+    methods
