--- a/.github/workflows/rworkflows.yml
+++ b/.github/workflows/rworkflows.yml
@@ -2,13 +2,11 @@ name: rworkflows
 'on':
   push:
     branches:
-    - master
     - main
     - devel
     - RELEASE_**
   pull_request:
     branches:
-    - master
     - main
     - devel
     - RELEASE_**
@@ -28,12 +26,12 @@ jobs:
           cont: ghcr.io/bioconductor/bioconductor_docker:devel
           rspm: ~
         - os: macOS-latest
-          bioc: release
+          bioc: devel
           r: auto
           cont: ~
           rspm: ~
         - os: windows-latest
-          bioc: release
+          bioc: devel
           r: auto
           cont: ~
           rspm: ~
