Reduce warnings from CMD check (still one)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,16 @@ importFrom(SummarizedExperiment,rowData)
 importFrom(TreeSummarizedExperiment,TreeSummarizedExperiment)
 importFrom(TreeSummarizedExperiment,rowLinks)
 importFrom(TreeSummarizedExperiment,rowTreeNames)
+importFrom(iSEE,.checkboxInput.iSEE)
+importFrom(iSEE,.conditionalOnCheckSolo)
+importFrom(iSEE,.createProtectedParameterObservers)
+importFrom(iSEE,.emptyDefault)
+importFrom(iSEE,.getEncodedName)
+importFrom(iSEE,.processMultiSelections)
+importFrom(iSEE,.retrieveOutput)
+importFrom(iSEE,.selectInput.iSEE)
+importFrom(iSEE,.singleStringError)
+importFrom(iSEE,.validLogicalError)
 importFrom(methods,callNextMethod)
 importFrom(methods,new)
 importFrom(miaViz,plotRowTree)
