--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,9 +21,12 @@ Imports:
     methods,
     S4Vectors
 Suggests:
+    knitr,
     mia,
+    rmarkdown,
     vegan
 URL: https://github.com/RiboRings/iSEEtree
 BugReports: https://github.com/RiboRings/iSEEtree/issues
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+VignetteBuilder: knitr
