--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ exportClasses(AbundancePlot)
 exportClasses(RDAPlot)
 exportClasses(RowTreePlot)
 exportMethods(iSEE)
+importClassesFrom(iSEE,ExperimentColorMap)
+importFrom(S4Vectors,isEmpty)
 importFrom(S4Vectors,setValidity2)
 importFrom(SingleCellExperiment,reducedDims)
 importFrom(SummarizedExperiment,assayNames)
@@ -23,11 +25,24 @@ importFrom(iSEE,.conditionalOnCheckSolo)
 importFrom(iSEE,.createProtectedParameterObservers)
 importFrom(iSEE,.emptyDefault)
 importFrom(iSEE,.getEncodedName)
+importFrom(iSEE,.numericInput.iSEE)
 importFrom(iSEE,.processMultiSelections)
 importFrom(iSEE,.retrieveOutput)
 importFrom(iSEE,.selectInput.iSEE)
 importFrom(iSEE,.singleStringError)
 importFrom(iSEE,.validLogicalError)
+importFrom(iSEE,.validNumberError)
+importFrom(iSEE,collapseBox)
+importFrom(iSEE,createLandingPage)
 importFrom(methods,callNextMethod)
+importFrom(methods,is)
 importFrom(methods,new)
+importFrom(methods,slot)
 importFrom(miaViz,plotRowTree)
+importMethodsFrom(iSEE,.createObservers)
+importMethodsFrom(iSEE,.defineInterface)
+importMethodsFrom(iSEE,.defineOutput)
+importMethodsFrom(iSEE,.fullName)
+importMethodsFrom(iSEE,.generateOutput)
+importMethodsFrom(iSEE,.panelColor)
+importMethodsFrom(iSEE,.renderOutput)
