--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,6 @@ exportClasses(AbundancePlot)
 exportClasses(RDAPlot)
 exportClasses(RowTreePlot)
 exportMethods(iSEE)
-importClassesFrom(iSEE,ExperimentColorMap)
 importFrom(S4Vectors,isEmpty)
 importFrom(S4Vectors,setValidity2)
 importFrom(SingleCellExperiment,reducedDims)
@@ -22,16 +21,20 @@ importFrom(TreeSummarizedExperiment,rowLinks)
 importFrom(TreeSummarizedExperiment,rowTreeNames)
 importFrom(iSEE,.checkboxInput.iSEE)
 importFrom(iSEE,.conditionalOnCheckSolo)
+importFrom(iSEE,.conditionalOnRadio)
 importFrom(iSEE,.createProtectedParameterObservers)
 importFrom(iSEE,.emptyDefault)
 importFrom(iSEE,.getEncodedName)
 importFrom(iSEE,.numericInput.iSEE)
 importFrom(iSEE,.processMultiSelections)
+importFrom(iSEE,.radioButtons.iSEE)
 importFrom(iSEE,.retrieveOutput)
 importFrom(iSEE,.selectInput.iSEE)
 importFrom(iSEE,.singleStringError)
+importFrom(iSEE,.textEval)
 importFrom(iSEE,.validLogicalError)
 importFrom(iSEE,.validNumberError)
+importFrom(iSEE,ExperimentColorMap)
 importFrom(iSEE,collapseBox)
 importFrom(iSEE,createLandingPage)
 importFrom(methods,callNextMethod)
@@ -39,6 +42,8 @@ importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,slot)
 importFrom(miaViz,plotRowTree)
+importFrom(shiny,plotOutput)
+importFrom(shiny,renderPlot)
 importMethodsFrom(iSEE,.createObservers)
 importMethodsFrom(iSEE,.defineInterface)
 importMethodsFrom(iSEE,.defineOutput)
