--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,7 +34,9 @@ importFrom(iSEE,.singleStringError)
 importFrom(iSEE,.textEval)
 importFrom(iSEE,.validLogicalError)
 importFrom(iSEE,.validNumberError)
+importFrom(iSEE,ComplexHeatmapPlot)
 importFrom(iSEE,ExperimentColorMap)
+importFrom(iSEE,ReducedDimensionPlot)
 importFrom(iSEE,collapseBox)
 importFrom(iSEE,createLandingPage)
 importFrom(methods,callNextMethod)
