Add tour to RowTreePlot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,12 +19,15 @@ importFrom(SummarizedExperiment,rowData)
 importFrom(TreeSummarizedExperiment,TreeSummarizedExperiment)
 importFrom(TreeSummarizedExperiment,rowLinks)
 importFrom(TreeSummarizedExperiment,rowTreeNames)
+importFrom(iSEE,.addSpecificTour)
+importFrom(iSEE,.addTourStep)
 importFrom(iSEE,.checkboxInput.iSEE)
 importFrom(iSEE,.conditionalOnCheckSolo)
 importFrom(iSEE,.conditionalOnRadio)
 importFrom(iSEE,.createProtectedParameterObservers)
 importFrom(iSEE,.emptyDefault)
 importFrom(iSEE,.getEncodedName)
+importFrom(iSEE,.getPanelColor)
 importFrom(iSEE,.numericInput.iSEE)
 importFrom(iSEE,.processMultiSelections)
 importFrom(iSEE,.radioButtons.iSEE)
