Improve existing panels and try selection (not working yet)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ exportClasses(AbundanceDensityPlot)
 exportClasses(AbundancePlot)
 exportClasses(RDAPlot)
 exportClasses(RowTreePlot)
+exportMethods(.multiSelectionDimension)
+exportMethods(.multiSelectionRestricted)
 exportMethods(iSEE)
 importFrom(S4Vectors,isEmpty)
 importFrom(S4Vectors,setValidity2)
@@ -49,10 +51,7 @@ importFrom(methods,slot)
 importFrom(miaViz,plotRowTree)
 importFrom(shiny,plotOutput)
 importFrom(shiny,renderPlot)
+importFrom(shinyWidgets,addSpinner)
 importMethodsFrom(iSEE,.createObservers)
-importMethodsFrom(iSEE,.defineInterface)
-importMethodsFrom(iSEE,.defineOutput)
-importMethodsFrom(iSEE,.fullName)
 importMethodsFrom(iSEE,.generateOutput)
-importMethodsFrom(iSEE,.panelColor)
 importMethodsFrom(iSEE,.renderOutput)
