--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: iSEEtree
-Version: 0.1.2
+Version: 0.1.3
 Authors@R: 
     person(given = "Giulio", family = "Benedetti", role = c("aut", "cre"),
            email = "giulio.benedetti@utu.fi",
@@ -22,6 +22,7 @@ Imports:
     miaViz,
     S4Vectors,
     shiny,
+    shinyWidgets,
     SingleCellExperiment,
     SummarizedExperiment,
     TreeSummarizedExperiment
