--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,6 @@ exportClasses(AbundanceDensityPlot)
 exportClasses(AbundancePlot)
 exportClasses(RDAPlot)
 exportClasses(RowTreePlot)
-exportMethods(.multiSelectionDimension)
-exportMethods(.multiSelectionRestricted)
 exportMethods(iSEE)
 importFrom(S4Vectors,isEmpty)
 importFrom(S4Vectors,setValidity2)
@@ -27,6 +25,7 @@ importFrom(iSEE,.checkboxInput.iSEE)
 importFrom(iSEE,.conditionalOnCheckSolo)
 importFrom(iSEE,.conditionalOnRadio)
 importFrom(iSEE,.createProtectedParameterObservers)
+importFrom(iSEE,.createUnprotectedParameterObservers)
 importFrom(iSEE,.emptyDefault)
 importFrom(iSEE,.getEncodedName)
 importFrom(iSEE,.getPanelColor)
@@ -54,4 +53,5 @@ importFrom(shiny,renderPlot)
 importFrom(shinyWidgets,addSpinner)
 importMethodsFrom(iSEE,.createObservers)
 importMethodsFrom(iSEE,.generateOutput)
+importMethodsFrom(iSEE,.panelColor)
 importMethodsFrom(iSEE,.renderOutput)
