--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,7 @@ Suggests:
     remotes,
     rmarkdown,
     scater,
-    testthat,
+    testthat (>= 3.0.0),
     utils,
     vegan
 URL: https://github.com/RiboRings/iSEEtree
@@ -42,3 +42,4 @@ BugReports: https://github.com/RiboRings/iSEEtree/issues
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 VignetteBuilder: knitr
+Config/testthat/edition: 3
