--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ exportClasses(RowTreePlot)
 exportMethods(iSEE)
 importFrom(S4Vectors,isEmpty)
 importFrom(S4Vectors,setValidity2)
+importFrom(SingleCellExperiment,reducedDimNames)
 importFrom(SingleCellExperiment,reducedDims)
 importFrom(SummarizedExperiment,assayNames)
 importFrom(SummarizedExperiment,colData)
@@ -38,9 +39,11 @@ importFrom(iSEE,.singleStringError)
 importFrom(iSEE,.textEval)
 importFrom(iSEE,.validLogicalError)
 importFrom(iSEE,.validNumberError)
+importFrom(iSEE,ColumnDataTable)
 importFrom(iSEE,ComplexHeatmapPlot)
 importFrom(iSEE,ExperimentColorMap)
 importFrom(iSEE,ReducedDimensionPlot)
+importFrom(iSEE,RowDataTable)
 importFrom(iSEE,collapseBox)
 importFrom(iSEE,createLandingPage)
 importFrom(methods,callNextMethod)
