--- a/.github/workflows/rworkflows.yml
+++ b/.github/workflows/rworkflows.yml
@@ -24,12 +24,12 @@ jobs:
           cont: ghcr.io/bioconductor/bioconductor_docker:devel
           rspm: ~
         - os: macOS-latest
-          bioc: release
+          bioc: devel
           r: auto
           cont: ~
           rspm: ~
         - os: windows-latest
-          bioc: release
+          bioc: devel
           r: auto
           cont: ~
           rspm: ~
