--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ License: Artistic-2.0
 Encoding: UTF-8
 Depends:
     R (>= 4.0),
-    iSEE
+    iSEE,
+    SummarizedExperiment
 Imports:
     methods,
     miaViz,
@@ -24,7 +25,6 @@ Imports:
     shiny,
     shinyWidgets,
     SingleCellExperiment,
-    SummarizedExperiment,
     TreeSummarizedExperiment
 Suggests:
     BiocStyle,
