--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ Imports:
     shinyWidgets,
     SingleCellExperiment,
     SummarizedExperiment,
+    SparseArray,
     TreeSummarizedExperiment
 Suggests:
     BiocStyle,
