--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ importFrom(iSEE,.radioButtons.iSEE)
 importFrom(iSEE,.retrieveOutput)
 importFrom(iSEE,.selectInput.iSEE)
 importFrom(iSEE,.singleStringError)
+importFrom(iSEE,.sliderInput.iSEE)
 importFrom(iSEE,.textEval)
 importFrom(iSEE,.validLogicalError)
 importFrom(iSEE,.validNumberError)
