--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ importFrom(methods,callNextMethod)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,slot)
+importFrom(mia,taxonomyRanks)
 importFrom(miaViz,plotRowTree)
 importFrom(shiny,plotOutput)
 importFrom(shiny,renderPlot)
