Added import methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,9 @@ importFrom(TreeSummarizedExperiment,rowLinks)
 importFrom(TreeSummarizedExperiment,rowTreeNames)
 importFrom(iSEE,.addSpecificTour)
 importFrom(iSEE,.addTourStep)
+importFrom(iSEE,.checkboxGroupInput.iSEE)
 importFrom(iSEE,.checkboxInput.iSEE)
+importFrom(iSEE,.conditionalOnCheckGroup)
 importFrom(iSEE,.conditionalOnCheckSolo)
 importFrom(iSEE,.conditionalOnRadio)
 importFrom(iSEE,.createProtectedParameterObservers)
@@ -56,7 +58,6 @@ importFrom(miaViz,plotRowTree)
 importFrom(shiny,plotOutput)
 importFrom(shiny,renderPlot)
 importFrom(shinyWidgets,addSpinner)
-importMethodsFrom(iSEE,.createObservers)
 importMethodsFrom(iSEE,.generateOutput)
 importMethodsFrom(iSEE,.panelColor)
 importMethodsFrom(iSEE,.renderOutput)
