--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ importFrom(miaViz,plotRowTree)
 importFrom(shiny,plotOutput)
 importFrom(shiny,renderPlot)
 importFrom(shinyWidgets,addSpinner)
+importFrom(utils,stack)
 importMethodsFrom(iSEE,.generateOutput)
 importMethodsFrom(iSEE,.panelColor)
 importMethodsFrom(iSEE,.renderOutput)
