Added .cacheCommonInfo & .refineParameters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,9 @@ exportClasses(AbundanceDensityPlot)
 exportClasses(AbundancePlot)
 exportClasses(RDAPlot)
 exportClasses(RowTreePlot)
+exportMethods(.cacheCommonInfo)
+exportMethods(.exportOutput)
+exportMethods(.refineParameters)
 exportMethods(iSEE)
 importFrom(S4Vectors,isEmpty)
 importFrom(S4Vectors,setValidity2)
@@ -20,6 +23,9 @@ importFrom(SummarizedExperiment,rowData)
 importFrom(TreeSummarizedExperiment,TreeSummarizedExperiment)
 importFrom(TreeSummarizedExperiment,rowLinks)
 importFrom(TreeSummarizedExperiment,rowTreeNames)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
+importFrom(grDevices,rainbow)
 importFrom(iSEE,.addSpecificTour)
 importFrom(iSEE,.addTourStep)
 importFrom(iSEE,.checkboxGroupInput.iSEE)
