--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,6 @@ exportClasses(AbundanceDensityPlot)
 exportClasses(AbundancePlot)
 exportClasses(RDAPlot)
 exportClasses(RowTreePlot)
-exportMethods(.exportOutput)
 exportMethods(iSEE)
 importFrom(S4Vectors,isEmpty)
 importFrom(S4Vectors,setValidity2)
@@ -63,6 +62,7 @@ importFrom(shiny,plotOutput)
 importFrom(shiny,renderPlot)
 importFrom(shinyWidgets,addSpinner)
 importFrom(utils,stack)
+importMethodsFrom(iSEE,.exportOutput)
 importMethodsFrom(iSEE,.generateOutput)
 importMethodsFrom(iSEE,.panelColor)
 importMethodsFrom(iSEE,.renderOutput)
