Implement Bioconductor feedback 1

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description:
     visualisation to create panels that are specific for
     TreeSummarizedExperiment objects. Not surprisingly, it also depends on the
     generic panels from iSEE.
-biocViews: Microbiome, Software, Visualization, DataImport
+biocViews: Microbiome, Software, Visualization, GUI, ShinyApps
 License: Artistic-2.0
 Encoding: UTF-8
 Depends:
