Write first draft of metagenomic tutorial

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: iSEEtree
-Version: 0.99.6
+Version: 0.99.7
 Authors@R: 
     c(person(given = "Giulio", family = "Benedetti", role = c("aut", "cre"),
            email = "giulio.benedetti@utu.fi",
@@ -38,6 +38,7 @@ Imports:
 Suggests:
     BiocStyle,
     knitr,
+    MGnifyR,
     RefManageR,
     remotes,
     rmarkdown,
