Added LoadingPlot and ColumnTreePlot panels

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,16 +2,21 @@
 
 export(AbundanceDensityPlot)
 export(AbundancePlot)
+export(ColumnTreePlot)
+export(LoadingPlot)
 export(RDAPlot)
 export(RowTreePlot)
 export(iSEE)
 exportClasses(AbundanceDensityPlot)
 exportClasses(AbundancePlot)
+exportClasses(ColumnTreePlot)
+exportClasses(LoadingPlot)
 exportClasses(RDAPlot)
 exportClasses(RowTreePlot)
 exportMethods(iSEE)
 importFrom(S4Vectors,isEmpty)
 importFrom(S4Vectors,setValidity2)
+importFrom(SingleCellExperiment,reducedDim)
 importFrom(SingleCellExperiment,reducedDimNames)
 importFrom(SingleCellExperiment,reducedDims)
 importFrom(SummarizedExperiment,assayNames)
@@ -57,6 +62,8 @@ importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,slot)
 importFrom(mia,taxonomyRanks)
+importFrom(miaViz,plotColTree)
+importFrom(miaViz,plotLoadings)
 importFrom(miaViz,plotRowTree)
 importFrom(shiny,plotOutput)
 importFrom(shiny,renderPlot)
