Add new panels to vignettes

--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -4,6 +4,8 @@ reference:
 - contents:
   - AbundanceDensityPlot
   - AbundancePlot
+  - ColumnTreePlot
+  - LoadingPlot
   - RDAPlot
   - RowTreePlot
 - title: Other
